# panduan-otomax

./: .gitignore  .markdownlint-cli2.jsonc  CODE_OF_CONDUCT.md  LICENSE  README.md  main.py  mkdocs.yml  pyproject.toml
.obsidian/: workspace.json
docs/: extra.css  glossary.md  index.md  using_glossary.md
docs/templates/: definition.html  links.html  refs-long.html  refs-short.html  summary.html
materi/01-produk/: materi-1.md
src/: main.py  tag.py
src/api/: api_trx.py
src/config/: settings.py
src/core/exceptions/: __init__.py  base.py  errorcases.py  handlers.py
src/core/middlewares/: __init__.py  request_context.py
src/core/mlogging/: config.py
src/domain/member/: model.py
src/services/: auth.py  client_auth.py  credential_auth.py  errors.py  siganture_auth.py
tests/: test_auth_model.py  test_auth_service.py  test_client_auth.py  test_credential_auth.py  test_signature_auth.py
